fix: add babel-helper

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,7 @@
     "examples/*"
   ],
   "version": "independent",
+  "useWorkspaces": true,
   "command": {
     "publish": {
       "conventionalCommits": true,
