--- a/examples/nextjs-app/package.json
+++ b/examples/nextjs-app/package.json
@@ -8,7 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@react-keycloak/nextjs": "file:../../packages/nextjs",
+    "@keycloak-react/nextjs": "file:../../packages/nextjs",
     "cookie": "^0.4.0",
     "isomorphic-unfetch": "3.0.0",
     "keycloak-js": "^9.0.2",
