--- a/examples/razzle-app/package.json
+++ b/examples/razzle-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@react-keycloak/razzle-app",
+  "name": "@keycloak-react/razzle-app",
   "version": "1.1.8",
   "private": true,
   "dependencies": {
-    "@react-keycloak/razzle": "file:../../packages/razzle",
+    "@keycloak-react/razzle": "file:../../packages/razzle",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "keycloak-js": "^9.0.0",
