--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     }
   },
   "dependencies": {
-    "@react-keycloak/core": "file:packages/core",
-    "@react-keycloak/nextjs": "file:packages/nextjs",
-    "@react-keycloak/razzle": "file:packages/razzle",
-    "@react-keycloak/web": "file:packages/web",
+    "@keycloak-react/core": "file:packages/core",
+    "@keycloak-react/nextjs": "file:packages/nextjs",
+    "@keycloak-react/razzle": "file:packages/razzle",
+    "@keycloak-react/web": "file:packages/web",
     "babel-helpers": "^6.24.1",
     "gatsby-starter-default": "file:examples/gatsbyjs",
     "nextjs-app": "file:examples/nextjs-app",
