--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-keycloak/web",
+  "name": "@keycloak-react/web",
   "version": "2.1.1",
   "license": "MIT",
   "description": "React bindings for Keycloak javascript adapter",
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.9.0",
-    "@react-keycloak/core": "file:../core",
+    "@keycloak-react/core": "file:../core",
     "hoist-non-react-statics": "^3.3.2",
     "prop-types": "^15.7.2"
   }
