--- a/packages/razzle/package.json
+++ b/packages/razzle/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/jeff-tian/keycloak-react.git"
   },
-  "author": "Mattia Panzeri <mattia.panzeri93@gmail.com>",
+  "author": "Jeff Tian <jeff.tian@outlook.com>",
   "bugs": {
     "url": "https://github.com/jeff-tian/keycloak-react/issues"
   },
@@ -45,11 +45,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.9.0",
-    "@keycloak-react/core": "file:../core",
+    "@keycloak-react/core": "^4.0.0",
     "base-64": "^0.1.0",
     "detect-node": "^2.0.4",
     "hoist-non-react-statics": "^3.3.2",
     "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2"
-  }
+  },
+  "gitHead": "c3e167fe1c5e3745f057b4656883f8ef7bb5676f"
 }
